workloads/backstage/dev/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    name: backstage
