workloads/backstage/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: backstage
  annotations:
    cert-manager.io/issuer: step-ca-cluster-issuer
    cert-manager.io/issuer-kind: StepClusterIssuer  
    cert-manager.io/issuer-group: certmanager.step.sm
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - backstage.skylarhoughtongithub.local
    secretName: backstage-tls
  rules:
  - host: backstage.skylarhoughtongithub.local
    http:
      paths:
      - backend:
          service:
            name: backstage
            port:
              number: 7007
        path: /
        pathType: Prefix
